# TimeBase

./: README.md  master-hus-data-mining.ipynb  pyproject.toml  requirements.txt  run_longExp.py
exp/: exp_main.py
plug-and-play_for_patchtst/: run_longExp.py
plug-and-play_for_patchtst/Formers/: Autoformer.sh  Informer.sh  Transformer.sh
plug-and-play_for_patchtst/Formers/FEDformer/: run.py
plug-and-play_for_patchtst/Formers/FEDformer/scripts/: LongForecasting.sh  LookBackWindow.sh
plug-and-play_for_patchtst/Formers/Pyraformer/scripts/: LongForecasting.sh  LookBackWindow.sh
plug-and-play_for_patchtst/scripts/patchtst+timebase/: electricity.sh  electricity2.sh  etth1.sh  etth2.sh  ettm1.sh  ettm2.sh  traffic.sh  weather.sh
scripts/: electricity.sh  etth1.sh  etth2.sh  ettm1.sh  ettm2.sh  kaggle_etth1.sh  traffic.sh  weather.sh
