[project]
name = "timebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.5.0",
    "thop",
    "tqdm>=4.62.0",
    "einops>=0.3.0",
    "pmdarima",
    "fbm>=0.3.0",
    "pywavelets",
    "pyyaml>=5.4.0",
]
